# sis

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.leon3  README.md  README.riscv  README.sis  config.h  config.h.in  configure  configure.ac  definitions.mk  elf.c  elf.h  erc32.c  exec.c  float.c  func.c  gr740.c  greth.c  grlib.c  grlib.h  help.c  interf.c  leon2.c  leon3.c  linenoise.c  linenoise.h  remote.c  riscv.c  riscv.h  rv32.c  rv32.dts  rv32dtb.h  sis.c  sis.h  sis.info  sis.texi  (+5 more)
.deps/: elf.Po  erc32.Po  exec.Po  func.Po  gr740.Po  greth.Po  grlib.Po  help.Po  interf.Po  leon2.Po  leon3.Po  linenoise.Po  remote.Po  riscv.Po  rv32.Po  sis.Po  sparc.Po  tap.Po
.github/workflows/: workflow.yml
src/: Makefile  config.h  exec.c  gr740.c  greth.c  grlib.c  grlib.h  help.c  interf.c  leon2.c  leon3.c  rv32.c  sis.c  sis.h  tap.c  timer.c  timer.h  uart.c  uart.h  uartdef.c  uartdef.h
test/integration/: Makefile
test/integration/resources/: Makefile  expectedResult  init.c  init_timers.c  init_uart_bidirectional.c  init_uarts.c
test/unit/: Makefile  main.c
test/unit/general/: general.cc
test/unit/uart/: uart_read_uart.c  uart_read_uart.cc  uart_read_uart.h
